# p1

./: CMakeLists.txt  README.md
include/: common.hpp  grid.hpp  robot.hpp
src/: common.cpp  grid.cpp  main.cpp  robot.cpp
